monProjetApex/force-app/main/default/objects/Order/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Particulier</fullName>
            </value>
            <value>
                <fullName>Professionnel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>