monProjetApex/force-app/main/default/objects/Order/fields/Pays__c.field-meta.xml
<CustomField>
    <fullName>Pays__c</fullName>
    <description>selon pays de livraison</description>
    <label>Pays</label>
    <length>25</length>
    <type>Text</type>
</CustomField>