monProjetApex/force-app/main/default/objects/Order/fields/Transporteur__c.field-meta.xml
<CustomField>
    <fullName>Transporteur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transporteur</label>
    <referenceTo>Transporteur__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>