monProjetApex/force-app/main/default/objects/Order/listViews/AllOrders.listView-meta.xml
<ListView>
    <fullName>AllOrders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>Transporteur__c</columns>
    <columns>ORDER.SHIPPING_ZIP</columns>
    <columns>ORDERS.STATUS_CODE</columns>
    <columns>ORDER.SHIPPING_COUNTRY_CODE</columns>
    <columns>ORDERS.ACTIVATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Orders</label>
</ListView>